Alignment fix

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -129,6 +129,10 @@ html {
   }
 }
 
+.search-results {
+  padding-top: size(12);
+}
+
 .infinite-scroll-component {
   overflow: initial !important;
 
